Launch it tests from Build.java